# 8051-curtain-engine

./: CMakeLists.txt  README.md
SDL3_SDK_APPLE/include/SDL3/: SDL.h  SDL_assert.h  SDL_asyncio.h  SDL_atomic.h  SDL_audio.h  SDL_begin_code.h  SDL_bits.h  SDL_blendmode.h  SDL_camera.h  SDL_clipboard.h  SDL_close_code.h  SDL_copying.h  SDL_cpuinfo.h  SDL_dialog.h  SDL_dlopennote.h  SDL_egl.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamepad.h  SDL_gpu.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_init.h  SDL_intrin.h  SDL_iostream.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  SDL_log.h  SDL_main.h  SDL_main_impl.h  SDL_messagebox.h  SDL_metal.h  SDL_misc.h  (+46 more)
SDL3_SDK_APPLE/lib/: libSDL3.dylib  libSDL3_mixer.dylib
asset/: map.tmx  map2.tmx
asset/animations/: blue_fairy_animations.xml  fox_animations.xml  large_fairy_animations.xml  red_fairy_animations.xml  reimu_animations.xml  sanae_animations.xml
asset/audio/sfx/: se_bonus3.flac  se_cancel00.flac  se_cardget.flac  se_cat00.flac  se_ch00.flac  se_ch01.flac  se_damage00.flac  se_damage01.flac  se_enep00.flac  se_enep01.flac  se_extend.flac  se_graze.flac  se_gun00.flac  se_hint00.flac  se_invalid.flac  se_item00.flac  se_kira00.flac  se_kira01.flac  se_kira02.flac  se_lazer00.flac  se_lazer01.flac  se_ok00.flac  se_option.flac  se_pause.flac  se_pldead00.flac  se_plst00.flac  se_power0.flac  se_power1.flac  se_powerup.flac  se_select00.flac  se_slash.flac  se_tan00.flac  se_tan01.flac  se_tan02.flac  se_timeout.flac  se_timeout2.flac  se_water.flac
asset/stage/: stage1.xml
src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  main.cpp
src/ecs/: Component.h  ComponentType.h  Entity.h  World.h
src/ecs/event/: AudioEventQueue.h  BaseEvent.cpp  BaseEvent.h  EventManager.h
src/ecs/system/: AnimationClip.h  AnimationSystem.h  AudioSystem.cpp  AudioSystem.h  BackgroundRenderSystem.h  BossHealthBarSystem.h  BossMovementSystem.cpp  BossMovementSystem.h  BossStateSystem.cpp  BossStateSystem.h  BossSystem.cpp  BossSystem.h  BossTrackerSystem.h  CameraSystem.h  ColliderRenderSystem.cpp  ColliderRenderSystem.h  CollisionSystem.cpp  CollisionSystem.h  ConvoySystem.cpp  ConvoySystem.h  CreditsSystem.cpp  CreditsSystem.h  DeathBombSystem.cpp  DeathBombSystem.h  DebugRenderSystem.cpp  DebugRenderSystem.h  DestructionSystem.h  EnemyHealthSystem.cpp  EnemyHealthSystem.h  EventResponseSystem.cpp  EventResponseSystem.h  FPSCounterSystem.h  FadeSystem.h  HUDSystem.h  HealthPointSystem.cpp  HealthPointSystem.h  IconCounterSystem.h  IconLabelSystem.h  InvincibilityFramesSystem.h  ItemBounceSystem.h  (+34 more)
src/manager/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  SceneManager.h  TextureManager.cpp  TextureManager.h
src/scene/: Scene.cpp  Scene.h  SceneType.h  StageLoader.cpp  StageLoader.h
src/utils/: BossFactory.cpp  BossFactory.h  Collision.cpp  Collision.h  ComponentUtils.h  DanmakuFactory.cpp  DanmakuFactory.h  EnemyFactory.cpp  EnemyFactory.h  ItemFactory.cpp  ItemFactory.h  ItemUtils.h  PlayerBombFactory.h  PlayerShotFactory.cpp  PlayerShotFactory.h  RenderUtils.h  StageUtils.cpp  StageUtils.h  TransformUtils.h  UIUtils.cpp  UIUtils.h  Vector2D.cpp  Vector2D.h
